--- a/assessment1/css/style.css
+++ b/assessment1/css/style.css
@@ -124,7 +124,6 @@ a:focus {
 	float: left;
 	padding:0;
 	margin:0;
-	
 }
 .menu-list li {
 	white-space: nowrap;
@@ -342,6 +341,7 @@ a:focus {
 	.menu-list {
 		display: block !important;
 		overflow: visible;
+		max-height:36px;
 	}
 	.menu-list li {
 		width: auto;
