--- a/assessment2/css/style.css
+++ b/assessment2/css/style.css
@@ -304,16 +304,33 @@ a:focus {
 }
 
 /* PARTNER LOGOS */
-.partner {
-	background:#f1f1f1;
+.partner-logos {
+	background:url('../img/partner-logo.png');
 }
-.partner ul {
+
+.partner-logos ul {
 	padding-left: 0;
 	margin: 0;
 }
-.partner li {
+.partner-logos li {
 	list-style: none;
 	display: inline-block;
+}
+.partner-logos img {
+	display: block;
+    height: auto;
+    max-width: 100%;
+    padding: 25px 0;
+}
+@media (max-width:767px){
+	.partner-logos .col-xs-4:nth-child(3n+1) {
+		clear: left;
+	}
+}
+@media (min-width:992px){
+	.partner-logos img {
+		padding: 95px 23px;
+	}
 }
 
 /* FOOTER */
@@ -449,15 +466,84 @@ a:focus {
 }
 
 /* MAIN */
-.main .heading-title {
+.main .heading-wrapper {
     border-bottom: 1px solid #e7e7e7;
+    margin-bottom: 30px;
     padding-bottom: 15px;
+}
+
+/* LIST VIEW */
+.list-view {
+	background:#fff;
+	box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+}
+.list-view .media-left img {
+    max-width: 250px;
+}
+
+/* ARCHIVE */
+.list-view .item-heading {
+	border-bottom: 1px solid #e7e7e7;
+    margin-bottom: 15px;
+    padding-bottom: 15px;
+}
+.list-view .item-heading h2 {
+    color: #42425F;
+    font-size: 20px;
+	font-weight: 400;
+}
+.list-view .item-include {
+	background:#f5f5f5;
+	margin-left: -15px;
+}
+.list-view .item-include span {
+	padding:15px
+}
+
+
+.heading-wrapper {
+    display: table;
+    width: 100%;
+}
+.heading-title, .results-view {
+	display: block;
+	text-align:center;
+}
+.heading-title {
+    margin-top: 0;
+    vertical-align: bottom;
+}
+.results-view {
+    vertical-align: bottom;
+}
+.results-view > .grid, .results-view > .list {
+    display: inline-block;
+}
+.results-view > .grid {
+    margin-right: 10px;
+}
+.results-view .fa {
+	display: table-cell;
+    text-align: right;
+    vertical-align: bottom;
+    color: #3e6977;
+    font-size: 20px;
+}
+@media (min-width:768px){
+	.heading-title {
+		display: table-cell;
+		text-align:left;
+	}
+	.results-view {
+		display: table-cell;
+		text-align: right;
+	}
 }
 
 /* SIDEBAR */
 .sidebar > .our-agents {
 	background:#fff;
-	box-shadow: 5px 0 5px -5px #f1f1f1, 0 5px 5px -5px #f1f1f1, -5px 0 5px -5px #f1f1f1;
+	box-shadow: 5px 0 5px -5px rgba(0, 0, 0, 0.1), 0 5px 5px -5px rgba(0, 0, 0, 0.1), -5px 0 5px -5px rgba(0, 0, 0, 0.1);
 	padding: 15px;
 }
 .sidebar > .our-agents .media-body,
@@ -491,9 +577,11 @@ a:focus {
 .media {
     margin-bottom: 15px;
 }
+
 .media:last-child {
     margin-bottom: 0;
 }
+
 .media-body, .media-left {
     display: table-cell;
     vertical-align: top;
