--- a/assessment2/css/style.css
+++ b/assessment2/css/style.css
@@ -489,6 +489,7 @@ a:focus {
 /* Pagination */
 .pagination {
     text-align: center;
+	padding-left: 0
 }
 .pagination > li {
     display: inline;
@@ -605,12 +606,10 @@ a:focus {
 .media {
     margin-bottom: 15px;
 }
-
 .media:last-child {
     margin-bottom: 0;
 }
-
-.media-body, .media-left {
+.media-left, .media-body {
     display: table-cell;
     vertical-align: top;
 }
@@ -621,7 +620,6 @@ a:focus {
     display: block;
     max-width: 50px;
 }
-
 
 /* --------------------------------------------------
  * MERGE
@@ -670,4 +668,361 @@ a:focus {
 	.container {
 		width: 1170px;
 	}
+}
+
+
+
+.property-row {
+  background-color: #fff;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.08);
+  display: table;
+  margin-bottom: 30px;
+  width: 100%; }
+
+.property-row-image {
+  display: block;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.15);
+  display: table-cell;
+  height: auto;
+  position: relative;
+  width: 262px; }
+  .property-row-image:after {
+    background-color: black;
+    background-image: url('../img/magnifier.png');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: 32px 32px;
+    content: '';
+    display: table-cell;
+    height: 100%;
+    left: 0px;
+    opacity: 0;
+    position: absolute;
+    text-align: center;
+    top: 0px;
+    transition: opacity .15s linear;
+    vertical-align: middle;
+    width: 100%;
+    z-index: 11; }
+  .property-row-image:hover:after {
+    opacity: .5; }
+  .property-row-image:before {
+    color: rgba(0, 0, 0, 0.2);
+    content: '\f015';
+    display: block;
+    font-family: 'FontAwesome';
+    font-size: 40px;
+    left: 50%;
+    position: absolute;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    z-index: 0; }
+    .footer .property-row-image:before {
+      color: #29B6F6; }
+  .property-row-image img {
+    display: block;
+    height: 100%;
+    position: absolute;
+    width: 100%;
+    z-index: 10; }
+  @media (max-width: 991px) {
+    .property-row-image {
+      display: block !important;
+      float: none;
+      width: 100%; }
+      .property-row-image img {
+        height: auto;
+        position: relative; } }
+
+.property-row-content {
+  display: table-cell;
+  padding: 0px 30px 50px 30px;
+  position: relative;
+  vertical-align: top; }
+  @media (max-width: 991px) {
+    .property-row-content {
+      display: block; } }
+
+.property-row-body {
+  color: #616161; }
+
+.property-row-title {
+  color: #424242;
+  margin-bottom: 0px; }
+  .property-row-title a {
+    color: #424242; }
+
+.property-row-title-actions {
+  float: right;
+  font-size: 15px; }
+  .property-row-title-actions > span {
+    display: inline-block;
+    margin-left: 10px; }
+  .property-row-title-actions a {
+    color: #BDBDBD;
+    cursor: pointer; }
+    .property-row-title-actions a:hover {
+      color: #EC407A; }
+
+.property-row-location {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.08);
+  color: #9E9E9E;
+  display: block;
+  font-size: 11px;
+  font-weight: 500;
+  list-style: none;
+  margin: 10px 0px 10px 0px;
+  padding: 0px 0px 10px 0px;
+  text-transform: uppercase; }
+  .property-row-location li {
+    display: inline; }
+
+.property-row-meta {
+  background-color: #F5F5F5;
+  border-top: 1px solid #E0E0E0;
+  bottom: 0px;
+  left: 0px;
+  position: absolute;
+  right: 0px; }
+  @media (min-width: 768px) and (max-width: 991px) {
+    .property-row-meta {
+      bottom: -50px;
+      left: -45px;
+      margin-left: 15px;
+      margin-right: -75px;
+      position: relative;
+      right: auto;
+      top: auto; } }
+  @media (max-width: 767px) {
+    .property-row-meta {
+      bottom: -50px;
+      left: -45px;
+      margin-left: 15px;
+      margin-right: -75px;
+      position: relative;
+      right: auto;
+      top: auto; } }
+
+.property-row-meta-item {
+  border-right: 1px solid #E0E0E0;
+  float: left;
+  font-size: 12px;
+  padding: 6px 20px; }
+  @media (max-width: 767px) {
+    .property-row-meta-item {
+      font-size: 10px; } }
+  .property-row-meta-item span {
+    margin: 0px 5px 0px 0px; }
+  .property-row-meta-item strong {
+    font-weight: 500; }
+  .property-row-meta-item:last-child {
+    border-right: 0px; }
+
+	
+/* Table */
+.table {
+  width: 100%;
+  max-width: 100%;
+  margin-bottom: 30px;
+  border-spacing: 0;
+  border-collapse: collapse;
+}
+.table-responsive {
+   min-height: .01%;
+  overflow-x: auto;
+}
+@media screen and (max-width: 767px) {
+  .table-responsive {
+    width: 100%;
+    margin-bottom: 15px;
+    overflow-y: hidden;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+    border: 1px solid #ddd;
+  }
+  .table-responsive > .table {
+    margin-bottom: 0;
+  }
+  .table-responsive > .table > thead > tr > th,
+  .table-responsive > .table > tbody > tr > th,
+  .table-responsive > .table > tfoot > tr > th,
+  .table-responsive > .table > thead > tr > td,
+  .table-responsive > .table > tbody > tr > td,
+  .table-responsive > .table > tfoot > tr > td {
+    white-space: nowrap;
+  }
+}
+.table > thead > tr > th,
+.table > tbody > tr > th,
+.table > tfoot > tr > th,
+.table > thead > tr > td,
+.table > tbody > tr > td,
+.table > tfoot > tr > td {
+  padding: 8px;
+  line-height: 1.42857143;
+  vertical-align: top;
+  border-top: 1px solid #ddd;
+}
+.table > thead > tr > th {
+	vertical-align: bottom;
+	background:#3E6977;
+	color:#fff;
+	text-align:left;
+	font-weight:500;
+}
+
+.property-box-image {
+    position: relative;
+}
+
+.property-box-simple {
+	background-color: #fff;
+	box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.08);
+	margin-bottom: 30px;
+}
+.property-box-simple:hover .property-box-simple-actions {
+	top: 0px;
+}
+.property-box-simple:hover .property-box-simple-header {
+	background-color: #29B6F6;
+}
+.property-box-simple:hover .property-box-simple-header h2 a {
+	color: #fff;
+}
+.property-box-simple:hover .property-box-simple-header h3 {
+	color: #E1F5FE;
+}
+
+.property-box-simple-meta {
+	padding: 16px 30px;
+}
+.property-box-simple-meta ul {
+	list-style: none;
+	margin: 0px;
+	padding: 0px;
+}
+.property-box-simple-meta li {
+	display: block;
+	font-size: 12px;
+	line-height: 28px;
+	margin: 0px;
+	overflow: hidden; }
+	.property-box-simple-meta span {
+	color: #757575; }
+	.property-box-simple-meta strong {
+	color: #424242;
+	float: right;
+}
+
+.property-box-simple-header {
+	background-color: #EEEEEE;
+	padding: 16px 30px;
+	position: relative;
+	transition: color .15s linear; }
+	.property-box-simple-header h2, .property-box-simple-header h3 {
+	line-height: 1.4;
+	margin: 0px;
+	padding: 0px; }
+	.property-box-simple-header h2 {
+	color: #616161;
+	display: block;
+	font-size: 18px;
+	font-weight: normal;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	transition: color .15s linear;
+	white-space: nowrap; }
+	.property-box-simple-header h2 a {
+	color: #616161;
+	transition: color .15s linear; }
+	.property-box-simple-header h3 {
+	color: #9E9E9E;
+	font-size: 15px;
+	font-weight: 500;
+	margin-top: 10px;
+	transition: color .15s linear;
+}
+
+.property-box-simple-header-thumbnail {
+	border: 3px solid #fff;
+	border-radius: 50%;
+	overflow: hidden;
+	position: absolute;
+	right: 30px;
+	top: -18px;
+	transition: border-color .15s linear;
+	z-index: 3;
+}
+.property-box-simple-header-thumbnail img {
+	height: 36px;
+	width: 36px;
+}
+.property-box-simple-header-thumbnail:hover {
+	border-color: #EC407A;
+}
+
+.property-box-simple-image-inner img {
+	position: relative;
+	z-index: 2;
+}
+
+.property-box-simple-actions {
+	background-color: #fff;
+	box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.08);
+	line-height: 18px;
+	left: 0px;
+	padding: 10px 16px;
+	position: absolute;
+	right: 0px;
+	top: -43px;
+	transition: top .15s linear;
+	z-index: 100; }
+	.property-box-simple-actions span {
+	color: #757575;
+	font-size: 11px;
+	font-weight: 600;
+	text-transform: uppercase; }
+	.property-box-simple-actions a {
+	color: #9E9E9E;
+	cursor: pointer; }
+	.property-box-simple-actions a:hover {
+	color: #E91E63; }
+	.property-box-simple-actions .fa {
+	font-size: 14px;
+	float: right;
+	margin-left: 20px;
+	margin-top: 3px;
+}
+
+
+.property-box-image img {
+	height: auto;
+	width: 100%;
+	display:block;	}
+	.property-box-image:hover .property-box-image-inner.has-agent {
+	-webkit-transform: translateY(-50px) scale(.6);
+	transform: translateY(-30px) scale(.6);
+}
+	
+	
+.property-badge {
+	background-color: #fff;
+	box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.08);
+	color: #757575;
+	display: block;
+	font-size: 11px;
+	font-weight: 600;
+	left: 12px;
+	line-height: 1;
+	padding: 7px 12px;
+	position: absolute;
+	text-transform: uppercase;
+	top: 12px;
+	z-index: 3; }
+	.property-badge-sticky {
+	background-color: #D81B60;
+	color: #fff;
+	left: auto;
+	right: 12px;
 }
