--- a/assessment1/css/style.css
+++ b/assessment1/css/style.css
@@ -4,59 +4,69 @@
  *	Designed by Santo
  *	Website www.softwareseni.com
 -------------------------------------------------- */
-
 /* --------------------------------------------------
  * TYPOGRAPHY
 -------------------------------------------------- */
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
-html, body { 
-	height:100%; 
-}
+
+html,
 body {
-	background-color: #fff;
-    color: #7a7c7f;
-	font-family: 'Open Sans', sans-serif;
-	font-size: 14px;
-    line-height: 1.42857;
-    margin: 0;
+  height: 100%;
+}
+
+body {
+  background-color: #fff;
+  color: #7a7c7f;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 14px;
+  line-height: 1.42857;
+  margin: 0;
 }
 
 /* HEADINGS */
-h1, h2, h3 {
-	font-weight: 300;
-    line-height: 1.1;
-    margin-bottom: 10px;
-    margin-top: 20px;
-}
-h1 {
-	font-size: 34px;
-}
-h2 {
-	font-size: 28px;
-}
+h1,
+h2,
 h3 {
-	font-size: 22px;
+  font-weight: 300;
+  line-height: 1.1;
+  margin-bottom: 10px;
+  margin-top: 20px;
+}
+
+h1 {
+  font-size: 34px;
+}
+
+h2 {
+  font-size: 28px;
+}
+
+h3 {
+  font-size: 22px;
 }
 
 /* BODY COPY */
 p {
-	margin: 0 0 10px;
+  margin: 0 0 10px;
 }
 
 /* LINK */
 a {
-	color: #337ab7;
-	text-decoration: none;
-	-webkit-transition: ease .3s;
-			transition: ease .3s;
+  color: #337ab7;
+  text-decoration: none;
+  -webkit-transition: ease 0.3s;
+  transition: ease 0.3s;
 }
+
 a:hover,
 a:focus {
-	color: #23527c;
+  color: #23527c;
 }
 
 /* --------------------------------------------------
@@ -64,22 +74,24 @@ a:focus {
 -------------------------------------------------- */
 /* CONTAINER */
 .container {
-	padding-right: 15px;
-	padding-left: 15px;
-	margin-right: auto;
-	margin-left: auto;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
+
 /* ROW */
 .row {
-	margin-right: -15px;
-	margin-left: -15px;
+  margin-right: -15px;
+  margin-left: -15px;
 }
+
 /* COLUMN */
 [class*="col-"] {
-    position: relative;
-	min-height: 1px;
-	padding-right: 15px;
-	padding-left: 15px;
+  position: relative;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
 }
 
 /* --------------------------------------------------
@@ -87,96 +99,107 @@ a:focus {
 -------------------------------------------------- */
 /* NAVBAR */
 .modal-btn {
-    display: inline-block;
+  display: inline-block;
 }
+
 .logo {
-	background: #e7e7e7;
-    border-radius: 50%;
-    display: inline-block;
-    height: 100px;
-    margin-bottom: 15px;
-    width: 100px;
+  background: #e7e7e7;
+  border-radius: 50%;
+  display: inline-block;
+  height: 100px;
+  margin-bottom: 15px;
+  width: 100px;
 }
 
 /* MENU */
 .menu-wrapper {
-	text-align: center;
-	padding: 15px 0 0;
+  text-align: center;
+  padding: 15px 0 0;
 }
+
 .menu {
-    margin-left: -15px;
-    margin-right: -15px;
+  margin-left: -15px;
+  margin-right: -15px;
 }
+
 .menu-title {
-	border-top: 1px solid #e7e7e7;
-    cursor: pointer;
-    display: block;
-    font-weight: 600;
-    margin-left: -15px;
-    margin-right: -15px;
-    padding: 15px;
-    text-align: center;
-    text-transform: uppercase;
+  border-top: 1px solid #e7e7e7;
+  cursor: pointer;
+  display: block;
+  font-weight: 600;
+  margin-left: -15px;
+  margin-right: -15px;
+  padding: 15px;
+  text-align: center;
+  text-transform: uppercase;
 }
+
 .menu-list {
-	width: 100%;
-	list-style: none;
-	float: left;
-	padding:0;
-	margin:0;
+  width: 100%;
+  list-style: none;
+  float: left;
+  padding: 0;
+  margin: 0;
 }
+
 .menu-list li {
-	white-space: nowrap;
-	display: block;
-	width: 100%;
+  white-space: nowrap;
+  display: block;
+  width: 100%;
 }
+
 .menu-list > li:first-child {
-    border-top: 5px solid #ccc;
+  border-top: 5px solid #ccc;
 }
+
 .menu-list > li:not(:last-child) {
-    border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
 }
+
 .menu-list > li > a {
-    display: block;
-    padding: 6px 15px;
-    text-transform: uppercase;
+  display: block;
+  padding: 6px 15px;
+  text-transform: uppercase;
 }
 
 /* HEADER */
 .header {
-	background-attachment: fixed;
-	background-image: url('../img/header.jpg');
-	background-position: center top;
-    background-repeat: no-repeat;
-	background-size: cover;
-    border-bottom: 5px solid #ccc;
-    border-top: 5px solid #ccc;
-    display: table;
-    height: 65%;
-    width: 100%;
+  background-attachment: fixed;
+  background-image: url("../img/header.jpg");
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-bottom: 5px solid #ccc;
+  border-top: 5px solid #ccc;
+  display: table;
+  height: 65%;
+  width: 100%;
 }
+
 .header-inner {
-	background: rgba(255, 255, 255, 0.8);
-    display: table-cell;
-    height: 100%;
-    padding-bottom: 20px;
-    padding-top: 30px;
-    text-align: center;
-    vertical-align: middle;
-    width: 100%;
+  background: rgba(255, 255, 255, 0.8);
+  display: table-cell;
+  height: 100%;
+  padding-bottom: 20px;
+  padding-top: 30px;
+  text-align: center;
+  vertical-align: middle;
+  width: 100%;
 }
+
 .header-inner h1 {
-	margin-top:0
+  margin-top: 0;
 }
 
 /* FOOTER */
 .footer {
-	background: #c3c8cc;
-    padding-bottom: 5px;
-    padding-top: 30px;
+  background: #c3c8cc;
+  padding-bottom: 5px;
+  padding-top: 30px;
 }
-.footer h3{
-	margin-top:0
+
+.footer h3 {
+  margin-top: 0;
 }
 
 /* --------------------------------------------------
@@ -184,134 +207,150 @@ a:focus {
 -------------------------------------------------- */
 /* MAIN CONTENT */
 .main-content {
-    padding-bottom: 5px;
-    padding-top: 30px;
+  padding-bottom: 5px;
+  padding-top: 30px;
 }
+
 .main-content .box:nth-child(2n+1) {
-    clear: left;
+  clear: left;
 }
 
 /* BOX */
 .box {
-	margin-bottom:30px
+  margin-bottom: 30px;
 }
 
 /* IMAGE RESPONSIVE + RATIO */
 .img-responsive img {
-	height: auto;
-    left: 50%;
-    margin: auto;
-    position: absolute;
-    top: 50%;
-    -webkit-transform: translate(-50%, -50%);
-		-ms-transform: translate(-50%, -50%);
-			transform: translate(-50%, -50%);
-	width: 100%;
+  height: auto;
+  left: 50%;
+  margin: auto;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  width: 100%;
 }
 
 /* VIDEO RESPONSIVE */
 .video-responsive > iframe {
-	border: 0;
-    bottom: 0;
-    height: 100%;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 100%;
+  border: 0;
+  bottom: 0;
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
 }
 
 /* LOGO MODAL */
 .modal-overlay {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background: rgba(0, 0, 0, 0.8);
-	z-index: 50;
-	visibility: hidden;
-	opacity: 0;
-	transition: 0.7s;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  z-index: 50;
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.7s;
 }
+
 .modal-content {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	z-index: 100;
-	visibility: hidden;
-	opacity: 0;
-	transition: 0.5s ease-out;
-	background-color: #fff;
-	box-shadow: 0px 9px 15px -5px rgba(0, 0, 0, 0.46);
-	padding: 15px;
-	margin-right:-50%;
-	-webkit-transform: translate(-50%, -50%) !important;
-        -ms-transform: translate(-50%, -50%) !important;
-            transform: translate(-50%, -50%) !important;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 100;
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.5s ease-out;
+  background-color: #fff;
+  box-shadow: 0 9px 15px -5px rgba(0, 0, 0, 0.46);
+  padding: 15px;
+  margin-right: -50%;
+  -webkit-transform: translate(-50%, -50%) !important;
+  -ms-transform: translate(-50%, -50%) !important;
+  transform: translate(-50%, -50%) !important;
 }
-.modal-in{
-	visibility: visible;
-	opacity: 1;
-	transition: all .2s;
+
+.modal-in {
+  visibility: visible;
+  opacity: 1;
+  transition: all 0.2s;
 }
+
 .modal-in + .modal-content {
-	visibility: visible;
-	opacity: 1;
-	transform: translateY(0);
+  visibility: visible;
+  opacity: 1;
+  transform: translateY(0);
 }
+
 .close {
-	background: #ddd;
-    border: 0;
-    color: #777;
-    cursor: pointer;
-    font-weight: 700;
-    height: 30px;
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 30px;
+  background: #ddd;
+  border: 0;
+  color: #777;
+  cursor: pointer;
+  font-weight: 700;
+  height: 30px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 30px;
 }
 
 /* FOOTER GALLERY */
 .footer-gallery {
-    font-size: 0;
-    margin: 0 -5px;
-    padding: 0;
+  font-size: 0;
+  margin: 0 -5px;
+  padding: 0;
 }
+
 .footer-gallery > li {
-	display: inline-block;
-    font-size: 16px;
-    margin-bottom: 10px;
-    max-width: 33.33333333%;
-    padding: 0 5px;
+  display: inline-block;
+  font-size: 16px;
+  margin-bottom: 10px;
+  max-width: 33.33333333%;
+  padding: 0 5px;
 }
+
 .footer-gallery img {
-    max-width: 100%;
-	height:auto;
-	display:block
+  max-width: 100%;
+  height: auto;
+  display: block;
 }
 
 /* --------------------------------------------------
  * MERGE
 -------------------------------------------------- */
 /* CLEAR */
-.container:before, .container:after, .row:before, .row:after, .nav:before, .nav:after {
-	display: table;
-	content: " ";
+.container:before,
+.container:after,
+.row:before,
+.row:after,
+.nav:before,
+.nav:after {
+  display: table;
+  content: " ";
 }
-.container:after, .row:after, .nav:after {
-	clear: both;
+
+.container:after,
+.row:after,
+.nav:after {
+  clear: both;
 }
 
 /* RESPONSIVE MEDIA */
-.img-responsive, .video-responsive {
-    border-radius: 5px;
-	position: relative;
-	display: block;
-	height: 0;
-	padding: 0;
-	overflow: hidden;
-	padding-bottom: 56.25%;
+.img-responsive,
+.video-responsive {
+  border-radius: 5px;
+  position: relative;
+  display: block;
+  height: 0;
+  padding: 0;
+  overflow: hidden;
+  padding-bottom: 56.25%;
 }
 
 /* --------------------------------------------------
@@ -319,60 +358,60 @@ a:focus {
 -------------------------------------------------- */
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
-	/* Grid System */
-	.container {
-		width: 750px;
-	}
-	.col-sm-6 {
-		float: left;width:50%
-	}
-	
-	/* Menu */
-	.menu-wrapper {
-		padding: 30px 0;
-	}
-	.menu {
-		margin: 0 -15px;
-	}
-	.menu-title {
-		display: none;
-		border-top:0;
-	}
-	.menu-list {
-		display: block !important;
-		overflow: visible;
-		max-height:36px;
-	}
-	.menu-list li {
-		width: auto;
-		display: inline-block;
-		border: 0 !important;
-	}
-	.menu-list > li > a {
-		border: 2px solid #e7e7e7;
-	}
-	
-	/* Cammon */
-	.wrapper {
-		padding-top:60px;
-		padding-bottom:20px;
-	}
+  /* Grid System */
+  .container {
+    width: 750px;
+  }
+  .col-sm-6 {
+    float: left;
+    width: 50%;
+  }
+  /* Menu */
+  .menu-wrapper {
+    padding: 30px 0;
+  }
+  .menu {
+    margin: 0 -15px;
+  }
+  .menu-title {
+    display: none;
+    border-top: 0;
+  }
+  .menu-list {
+    display: block !important;
+    overflow: visible;
+    max-height: 36px;
+  }
+  .menu-list li {
+    width: auto;
+    display: inline-block;
+    border: 0 !important;
+  }
+  .menu-list > li > a {
+    border: 2px solid #e7e7e7;
+  }
+  /* Cammon */
+  .wrapper {
+    padding-top: 60px;
+    padding-bottom: 20px;
+  }
 }
 
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: 992px) {
-	/* Grid System */
-	.container {
-		width: 970px;
-	}
-	.col-md-3{
-		float: left;width:25%
-	}
+  /* Grid System */
+  .container {
+    width: 970px;
+  }
+  .col-md-3 {
+    float: left;
+    width: 25%;
+  }
 }
 
 /* Large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
-	.container {
-		width: 1170px;
-	}
+  .container {
+    width: 1170px;
+  }
 }
